# rosetta

./: .benchmark-signature  .commit_template.txt  .gitignore  .gitmodules  .hgignore  CITING_ROSETTA.md  CLA.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE.PyRosetta.md  LICENSE.md  README.md  index.txt
.buildkite/: README.md
.buildkite/hooks/: post-checkout  pre-exit
.github/: CODEOWNERS
database/citations/: rosetta_citations.txt
database/gpu/: DARC_PSO.cl  DARC_VERSION2.cl
database/input_output/: README.txt  modomics_and_iupac_to_ann.txt  pdb_record_defs
database/membrane/: embeddings.mp  implicit_lipid_parameters.txt  lipid_electric_field_params.txt  memb_fa_params_2019.txt  membrane.mp
database/rotamer/: .gitignore
database/sequence/: resinfo.db  resinfo2.db
database/utilities/: revert_slim.csh
database/virtual_enzymes/: README
docker/: README.md  rosetta-alpine-3.9.dockerfile  rosetta-ml.dockerfile  rosetta-ubuntu-18.04.dockerfile  rosetta-ubuntu-20.04.dockerfile  rosetta-ubuntu-22.04.dockerfile
inputs/: 1KTN
inputs/inputs/: in_list
rosetta_database/: 5A_orbitals_bb_sc.txt  5A_orbitals_haro.txt  5A_orbitals_hpol.txt  5A_sc_orb_bb_H.txt  P_AA  P_AA_n  P_AA_pp_08.2009  Paa_pp  VQ-DNA-512.rotlib  VQ-DNA-64.rotlib  atom_properties_coarse.txt  atom_vdw.txt  cbeta_den.txt  cenpack_log.txt  env_log.txt  interchain_pair_log.txt  mem_env_log.txt  mem_pair_log.txt  neighbor_vector_score.histogram  orbitals_haro.txt  orbitals_hpol.txt  orbitals_orbitals.txt  patches.txt  pdbpairstats_fine  pepspec_background.binding-prot-0.1.pwm  phi.theta.36.SS.resmooth  rsd_list.txt  slim_down.csh
rosetta_database/ExtendedOpt1-5/: AcademicLicenseBBDep2010.txt
rosetta_database/branch_angle/: branch_angle_2.txt
rosetta_database/coarse_rsd_params/: patches.txt  residue_types.txt
rosetta_database/gpu/: DARC_PSO.cl  DARC_PSO_PHIPSI.cl  darc.cl  sc.cl
rosetta_database/ncaa_rotlibs/: Readme  hlu.rotlib
rosetta_database/qsar/: TPSA.txt  lj_table.txt
rosetta_database/rosettaholes/: decoy25.params  resl.params
rosetta_database/ss_fragfiles/: EEE.fragfile  HEH.fragfile  HEL.fragfile  HHE.fragfile  HHL.fragfile  HLH.fragfile  LEE.fragfile  LEL.fragfile
rosetta_source/: .gitignore  BuildDocs.sh  Doxyfile  Doxyfile.manual  Doxyfile.src  SConscript  SConstruct  make_ctags.sh  ninja_build.py  performance-benchmark.py  projects.settings  readme.txt  remove_build.sh  svn_version.py  update_options.sh
rosetta_source/cmake/: README  README_ninja  build_util.py  make_project.py  smart_symlink.py
rosetta_source/cmake/build_native_client/: CMakeLists.txt  build_me.sh  mini_rosetta_native_client.nmf  minirosetta.html
rosetta_source/cmake/build_staticmpi/: CMakeLists.txt  buildme.sh  make_ctags.sh
rosetta_source/cmake/build_staticmpi_bluegene/: CMakeLists.txt
rosetta_source/doc/: PreparingStructures.dox  PyMOLServer.dox  RNA_protein_compatability.dox  RobustRosetta.dox  RosettaLibraryStructure.dox  index.html  mainpage.dox  mini_rosetta_overview.dox  options.dox
rosetta_source/ide/: headers.cc
rosetta_source/src/: Doxyfile.00  Doxyfile.01  ObjexxFCL.src.settings  SConscript.apps  SConscript.src  apps.src.settings  basic.src.settings  core.1  core.1.src.settings  core.2.src.settings  core.3.src.settings  core.4.src.settings  core.5.src.settings  devel.src.settings  devel.src.settings.release  devel.src.settings.template  numeric.src.settings  pilot_apps.src.settings.all  pilot_apps.src.settings.template  protocols.1.src.settings  protocols.2.src.settings  protocols.3.src.settings  protocols.6.src.settings  protocols.7.src.settings  protocols.src.settings  protocols_a.2.src.settings  protocols_a.4.src.settings  protocols_a.5.src.settings  protocols_a.6.src.settings  protocols_b.4.src.settings  protocols_b.5.src.settings  protocols_b.6.src.settings  protocols_c.4.src.settings  protocols_c.5.src.settings  protocols_c.6.src.settings  protocols_d.4.src.settings  protocols_d.5.src.settings  protocols_e.4.src.settings  protocols_e.5.src.settings  protocols_f.4.src.settings  (+4 more)
rosetta_source/stubs/: Application.cc  BaseClass.cc  BaseClass.fwd.hh  DerivedClass.cc  DerivedClass.fwd.hh  DerivedClass.hh  FinalClass.cc  FinalClass.fwd.hh  FinalClass.hh  Interface.cc  MoverStub.cc  README  StandaloneClass.cc  StandaloneClass.fwd.hh  package.dox
rosetta_source/test/: ObjexxFCL.test.settings  SConscript.test  UMoverTest.hh  UTracer.hh  apps.test.settings  basic.test.settings  core.test.settings  demo.test.settings  devel.test.settings  numeric.test.settings  protocols.test.settings  run.py  timelimit.py  utility.test.settings  yaml
rosetta_source/xcode/: README  build_util.py  make_component.py  make_project.py  make_test.py  xcode_util.py
rosetta_tests/features/: README.txt  analyze  compare_sample_sources.R  features.py  submit
rosetta_tests/integration/: .gitignore  README  compare_times.py  ignore_list  integration.py  integration3.py  runtimes
rosetta_tests/profile/: .gitignore  profile.py  remove_old_results.sh
rosetta_tests/scientific/: scientific.py  scientific_biweekly.py
rosetta_tests/sfxn_fingerprint/: accept-changes.sh  sfxn_fingerprint.py
source/: .gitignore  .ycm_extra_conf.py  BuildDocs.sh  Doxyfile.src  SConscript  SConstruct  accept_utracers.sh  build_sid_erms_app_debug.sh  cart_min.scr  make_ctags.sh  ninja_build.py  performance-benchmark.py  projects.settings  readme.txt  remove_build.sh  results.txt  scons.py  svn_version.py  test_sid_erms_app_debug.sh  update_ResidueType_enum_files.sh  update_options.sh  update_residue_properties.sh  update_submodules.sh  version.py
source/cmake/: .gitignore  (+6 more)
source/cmake/build_cyrus/: CMakeLists.txt
source/cmake/build_elscripts/: CMakeLists.txt
source/cmake/build_mac_graphics/: CMakeLists.txt
source/cmake/build_native_client_32/: CMakeLists.txt
source/cmake/build_release_static/: CMakeLists.txt
source/cmake/build_staticmpi_bluegene/: CMakeLists.txt  buildme.sh
source/cmake/build_staticmpi_bluegene_clang/: CMakeLists.txt  buildme.sh
source/cmake/build_torch/: CMakeLists.txt
tests/: .gitignore
(+48673 files in other folders)
